--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,208 @@
+@import "normalize.css";
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  --lilac: #ebecf3;
+  --lavender: #c6bcf9;
+  --purple: #6355ab;
+  --peach: #ffc39e;
+  --orange: #ff8f4f;
+  --rose: #ffccd1;
+  --gray: #f1f2f7;
+  --magenta: #0b113c;
+  --babyblue: #d6f1fe;
+  --darkrose: #f34e5f;
+  --darkpeach: #f78f4e;
+  --darkblue: #9fdbf8;
+  --myFont: "Inconsolata", monospace;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+html {
+  box-sizing: border-box;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+p,
+pre,
+blockquote,
+figure,
+figcaption,
+hr,
+dl,
+dd {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
+  color: inherit;
+  font: inherit;
+  outline: none;
 }
-a:hover {
-  color: #535bf2;
+
+form {
+  width: 100%;
+}
+
+input,
+textarea,
+select,
+button {
+  color: inherit;
+  font: inherit;
+  letter-spacing: inherit;
+  background-color: transparent;
+  border-radius: 0;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+}
+
+input,
+textarea,
+button {
+  border: none;
+}
+
+img,
+svg,
+iframe,
+video,
+object,
+embed {
+  display: block;
+  max-width: 100%;
+}
+
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+[hidden] {
+  opacity: 0;
+  visibility: hidden;
+}
+
+[tabindex="-1"] {
+  outline: none !important;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  font-family: var(--myFont);
+  scroll-behavior: smooth;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header {
+  background-color: var(--lavender);
+  color: var(--magenta);
+  padding: 1rem;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+header h1 {
+  font-size: 2.5rem;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+nav ul {
+  padding: 0;
+  margin-top: 1rem;
+}
+
+nav ul {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: space-between;
+  gap: 2rem;
+  font-size: 1.5rem;
+}
+
+nav li {
+  margin-bottom: 0.5rem;
+}
+
+nav a {
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: white;
+  display: block;
+  padding: 0.5rem;
+  text-align: center;
+  background-color: var(--color10);
+  border-radius: 5px;
+}
+
+nav a:hover {
+  background-color: var(--color1);
+  color: var(--color5);
+}
+
+main {
+  background-color: var(--lilac);
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.photo {
+  flex-basis: 46%;
+}
+
+main img {
+  width: 100%;
+  height: 100%;
+}
+
+.posts {
+  padding-left: 1rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+}
+
+article h2 {
+  margin-bottom: 0.5rem;
+}
+
+footer {
+  background-color: var(--purple);
+  padding: 2rem;
+  text-align: center;
 }
